Remove deprecated Double and Integer constructors